# src/market/api_types.py
@@ -361,5 +361,6 @@ class OptionsChain(BaseModel):
     """
 
     underlying_symbol: str
+    currency: str
     as_of: date | None = None
     contracts: list[OptionsChainEntry] = []
